Rewrote DislikeAnimal now it works, it had a leak
