# SwipperBackup/bin/Release/net6.0/swagger.json
@@ -361,6 +361,32 @@
         }
       }
     },
+    "/api/DislikeAnimal": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "userId",
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "in": "query",
+            "name": "animalId",
+            "type": "integer",
+            "format": "int32"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/User/GetFavoriteListings": {
       "get": {
         "tags": [
